# winpki

./: .gitattributes  .gitignore  Makefile.am  README.md  README.txt  autogen.sh  configure.ac  winpki.sln
src/: Makefile.am  pki.c
src/.msvc/: winpki.vcxproj  winpki.vcxproj.filters
